Changes for 1.2.7
* Bunker rules allowed by new unit property, isConstruction, and new game properties for it (crystalct), heavily modified and bugs fixed, with updated NWO and POS2. (veqryn)

* Updating Pact of Steel 2, to take advantage of latest technology list abilities. (veqryn)

* Patch for technology lists, to allow creation of new technologies and renaming of old ones. Allows adding new technologies by trigger. (squid daddy)

* Created two new properties for map.properties, "map.showConvoyNames=true" and "map.useNation_convoyFlags=true". If useNation_convoyFlags is true, the flags folder of a game must have "<nation_name>_convoy.png" for each nation with convoys. Convoy names can be moved in name_place.txt (veqryn)

* Increasing Max Memory to 512mb for linux/mac/windows, and to 192mb for the server. (veqryn)

* New Property, "Low Luck for AntiAircraft", will turn on Low Luck only for Anti Aircraft shots. (veqryn)

* Allowed blockade and convoy images to be moved with 2 new txt files: "blockade.txt" and "convoy.txt". Also fixed bug where a convoy zone that was occupied territory displayed the wrong owner, and the bug where a convoy route was displayed as a convoy zone. (veqryn)

* Added images to be displayed for Blockades. Default image is "blockade.png" in the misc folder of a map. (veqryn)

* Added new unit property, "isCombatTransport", which allows a transport to fight, be taken casualty, and not allow enemies to move through it, under ww2v3 rules. (veqryn)

* Added new property, "Multiply PUs", which will multiply all PUs gained or lost during a turn, but not yet multiply costs of units, repairs, or starting PUs. (squid daddy)

* Added Technology Frontiers, and ability to customize which tech is available to which player. (squid daddy)

* Changed Pact of Steel 2 to take advantage of new Tech choosing attachments. (veqryn)
